--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Streamdata Gallery
-url: blogger.api.streamdata.gallery
+title: Streamdata Gallery Blogger
+url: blogger.streamdata.gallery
 tag: Blogger
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery-organizations
+github_user: streamdata-gallery
 github_repo: blogger
 github_branch: master
 collections:
